# OOP-lab-5

./: CMakeLists.txt  README.md
laborator2-4/laborator2-4/: laborator2-4.sln
laborator2-4/laborator2-4/laborator2-4/: customSort.c  customSort.h  laborator2-4.vcxproj  laborator2-4.vcxproj.filters  lista.c  lista.h  main.c  service.c  service.h  tranzactie.c  tranzactie.h  ui.c  ui.h  utils.c  utils.h
laborator2-4/laborator2-4/laborator2-4/.opencppcov/laborator2-4/: Debug_x64.json
laborator2-4/laborator2-4/laborator2-4/x64/Debug/: laborator2-4.exe.recipe  laborator2-4.ilk  modular_tranzactie.obj.enc  ui.obj.enc  vc143.idb
laborator2-4/laborator2-4/laborator2-4/x64/Debug/laborator2-4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  laborator2-4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
